--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - n8n_data:/home/node/.n8n
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.n8n.rule=Host(`test.mondomaine.com`)"
+      - "traefik.http.routers.n8n.rule=Host(`test1.mondomaine.com`)"
       - "traefik.http.routers.n8n.entrypoints=websecure"
       - "traefik.http.routers.n8n.tls.certresolver=le"
     networks:
@@ -21,4 +21,5 @@ networks:
   proxy:
 
     external: true
+
 
