--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   n8n:
     image: n8nio/n8n:latest
+    container_name: n8n
     restart: always
     volumes:
       - n8n_data:/home/node/.n8n
@@ -21,5 +22,6 @@ networks:
   proxy:
 
     external: true
+
 
 
